--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -104,10 +104,10 @@
         <div class="container"><span class="services__title title-h1 page__title">Услуги</span>
           <ul class="services-list">
             <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Веб Дизайн</span>
-              <p class="services-list__text text-gray default-text">Аналитика, визуальный и пользовательский дизайн, Анимация интерфейсов,  фирменный<br> стиль, лого, банеры.</p>
+              <p class="services-list__text text-gray default-text">Аналитика, визуальный и пользовательский дизайн, Анимация интерфейсов,  фирменный<br> стиль, логотипы и банеры.</p>
             </li>
             <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Веб Разработка</span>
-              <p class="services-list__text text-gray default-text">Имиджевые сайты,<br class="d-sm-inline-block"> Интернет-магазины, Сайт-каталог, Лендинг страницы, Разработка и<br> интеграфия СRM cистем.</p>
+              <p class="services-list__text text-gray default-text">Имиджевые сайты, Визитка, Интернет-магазины, Сайт-каталог, Лендинг страницы, Разработка<br> и интеграфия СRM cистем.</p>
             </li>
             <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Техподдержка</span>
               <p class="services-list__text text-gray default-text">Системное администрирование, Копирайтинг, Контент-менеджмент.</p>
@@ -146,7 +146,7 @@
       <!--Studio BEGIN-->
       <section class="studio section">
         <div class="container"><span class="studio__title title-h1 page__title">Cтудия</span>
-          <p class="studio__text default-text text text-gray">Cивенков это команда молодых<br class="d-375-400-inline-block"> и амбициозных специалистов,<br class="d-375-400-inline-block"> которые нашли друг друга<br> блягодаря своему стремлению<br class="d-375-400-inline-block"> к созданию совершенного<br class="d-375-400-inline-block"> продукта. Для нас не существует<br> нерешаемых задач. Всю свою<br class="d-375-400-inline-block"> страсть, любовь и талант к работе<br class="d-375-400-inline-block"> мы демонстрируем в наших<br> проектах.<br class="d-375-400-inline-block"> Непрекращающееся обучение и<br class="d-375-400-inline-block"> развитие, совместная работа<br class="d-375-400-inline-block"> команды с клиентам<br> и следование<br class="d-375-400-inline-block"> срокам - это то, чем мы по праву<br class="d-375-400-inline-block"> гордимся.</p>
+          <p class="studio__text default-text text text-gray">Cивенков это команда молодых<br class="d-375-400-inline-block"> и амбициозных специалистов,<br class="d-375-400-inline-block"> которые нашли друг друга<br> благодаря своему стремлению<br class="d-375-400-inline-block"> к созданию совершенного<br class="d-375-400-inline-block"> продукта. Для нас не существует<br> нерешаемых задач. Всю свою<br class="d-375-400-inline-block"> страсть, любовь и талант к работе<br class="d-375-400-inline-block"> мы демонстрируем в наших<br> проектах.<br class="d-375-400-inline-block"> Непрекращающееся обучение и<br class="d-375-400-inline-block"> развитие, совместная работа<br class="d-375-400-inline-block"> команды с клиентам<br> и следование<br class="d-375-400-inline-block"> срокам - это то, чем мы по праву<br class="d-375-400-inline-block"> гордимся.</p>
         </div>
       </section>
       <!--Studio END-->
@@ -218,9 +218,9 @@
       </div>
       <div class="container">
         <div class="footer-top footer-info">
-          <div class="footer-info__top"><a class="link-dark footer-info__item text-medium" href="tel:375291382469">+375 29 138-24-69</a><a class="link-dark footer-info__item text-medium" href="mailto:info@sivenkov.by">info@sivenkov.by</a></div>
+          <div class="footer-info__top"><a class="link link-dark footer-info__item text-medium" href="tel:375291382469">+375 29 138-24-69</a><a class="link link-dark footer-info__item text-medium" href="mailto:info@sivenkov.by">info@sivenkov.by</a></div>
           <div class="footer-info__bottom">
-            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link-dark footer-info__item text-medium" href="#" target="_blank">Политика Конфиденциальности</a>
+            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link link-gray footer-info__item text-medium" href="#" target="_blank">Политика Конфиденциальности</a>
           </div>
         </div>
         <div class="row-info">
@@ -250,7 +250,7 @@
 </svg></a></li>
           </ul>
           <div class="footer-bottom__item footer-info">
-            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link-dark footer-info__item text-medium" href="#" target="_blank">Политика Конфиденциальности</a>
+            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link link-gray footer-info__item text-medium" href="#" target="_blank">Политика Конфиденциальности</a>
           </div>
         </div>
       </div>
