--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#fff">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
     <link rel="apple-touch-icon" sizes="57x57" href="favicon.svg">
-    <link rel="stylesheet" href="css/main.min.css">
+<!--     <link rel="stylesheet" href="css/main.min.css"> -->
   </head>
   <body>
     <div class="progress-bar">
