--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -78,9 +78,9 @@
         <div class="container">
           <div class="our-plus__content"><span class="our-plus__title title-h1 page__title"><span>Мы создаём<br> сайты с любовью</span><span class="our-plus__wrap-love"><img class="our-plus__love" src="img/love.svg" alt=""></span></span>
             <ul class="our-plus__list">
-              <li class="our-plus__item text-semibold title-h3 text-gray">Уникально</li>
-              <li class="our-plus__item text-semibold title-h3 text-gray">Качественно</li>
-              <li class="our-plus__item text-semibold title-h3 text-gray">Функционально</li>
+              <li class="our-plus__item title-h3 text-gray">Уникально</li>
+              <li class="our-plus__item title-h3 text-gray">Качественно</li>
+              <li class="our-plus__item title-h3 text-gray">Функционально</li>
             </ul>
             <p class="our-plus__bottom-text default-text text-gray">Закажите продающий сайт для решения задач вашего бизнеса</p><a class="our-plus__btn btn btn-popup" href="#" data-text="Заказать консультацию" data-popup-key="callback"><span class="btn__overlay"></span><span class="btn__text">Заказать консультацию</span></a>
           </div>
@@ -103,13 +103,13 @@
         </div>
         <div class="container"><span class="services__title title-h1 page__title">Услуги</span>
           <ul class="services-list">
-            <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Веб Дизайн</span>
+            <li class="services-list__item"><span class="services-list__title title-h3 text-accent">Веб Дизайн</span>
               <p class="services-list__text text-gray default-text">Аналитика, визуальный и пользовательский дизайн, Анимация интерфейсов,  фирменный<br> стиль, логотипы и банеры.</p>
             </li>
-            <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Веб Разработка</span>
+            <li class="services-list__item"><span class="services-list__title title-h3 text-accent">Веб Разработка</span>
               <p class="services-list__text text-gray default-text">Имиджевые сайты, Визитка, Интернет-магазины, Сайт-каталог, Лендинг страницы, Разработка<br> и интеграфия СRM cистем.</p>
             </li>
-            <li class="services-list__item"><span class="services-list__title title-h3 text-accent text-semibold">Техподдержка</span>
+            <li class="services-list__item"><span class="services-list__title title-h3 text-accent">Техподдержка</span>
               <p class="services-list__text text-gray default-text">Системное администрирование, Копирайтинг, Контент-менеджмент.</p>
             </li>
           </ul>
@@ -218,9 +218,9 @@
       </div>
       <div class="container">
         <div class="footer-top footer-info">
-          <div class="footer-info__top"><a class="link link-dark footer-info__item text-medium" href="tel:375291382469">+375 29 138-24-69</a><a class="link link-dark footer-info__item text-medium" href="mailto:info@sivenkov.by">info@sivenkov.by</a></div>
+          <div class="footer-info__top"><a class="link link_dark footer-info__item text-medium" href="tel:375291382469">+375 29 138-24-69</a><a class="link link_dark footer-info__item text-medium" href="mailto:info@sivenkov.by">info@sivenkov.by</a></div>
           <div class="footer-info__bottom">
-            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link link-gray footer-info__item text-medium" href="#" target="_blank">Политика Конфиденциальности</a>
+            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link link_gray footer-info__item text-medium" href="#" target="_blank">Политика Конфиденциальности</a>
           </div>
         </div>
         <div class="row-info">
@@ -250,7 +250,7 @@
 </svg></a></li>
           </ul>
           <div class="footer-bottom__item footer-info">
-            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link link-gray footer-info__item text-medium" href="#" target="_blank">Политика Конфиденциальности</a>
+            <address class="footer-info__item text-gray">Минск, ул.Янковского - 13</address><a class="link link_gray footer-info__item text-medium" href="privacy-policy.html">Политика Конфиденциальности</a>
           </div>
         </div>
       </div>
