--- a/sivenkov-landing/privacy-policy.html
+++ b/sivenkov-landing/privacy-policy.html
@@ -9,9 +9,9 @@
     <meta name="theme-color" content="#fff">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
     <link rel="apple-touch-icon" sizes="57x57" href="favicon.svg">
-    <link rel="stylesheet" href="css/main.min.css"><!--[if IE]><link rel="stylesheet" href="css/ie10.min.css"><![endif]-->
+    <link rel="stylesheet" href="css/main.min.css">
   </head>
-  <body><!--[!if lt IE 10]>
+  <body><!--[if lt IE 10]>
     <section class="ie-info"><span>IEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIEIE</span></section><![endif]-->
     <!--Preloader BEGIN-->
     <section class="preloader">
