--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -165,8 +165,17 @@
             <li class="portfolio__wrap-item wow fadeInUp" data-wow-delay=".3s" data-wow-duration="1.2s">
               <div class="portfolio__item responsive-image"><img class="portfolio__img" src="img/portfolio-2.jpg"></div>
             </li>
+            <li class="portfolio__wrap-item portfolio__wrap-item_hide">
+              <div class="portfolio__item responsive-image"><img class="portfolio__img" src="img/portfolio-3.jpg"></div>
+            </li>
+            <li class="portfolio__wrap-item portfolio__wrap-item_hide">
+              <div class="portfolio__item responsive-image"><img class="portfolio__img" src="img/portfolio-4.jpg"></div>
+            </li>
+            <li class="portfolio__wrap-item portfolio__wrap-item_hide">
+              <div class="portfolio__item responsive-image"><img class="portfolio__img" src="img/portfolio-5.jpg"></div>
+            </li>
           </ul>
-          <div class="portfolio__wrap-btn wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".6s"><span class="portfolio__btn btn btn-modal" data-text="Показать больше"><span class="btn__overlay"></span><span class="btn__text">Показать больше</span></span></div>
+          <div class="portfolio__wrap-btn wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".6s"><span class="portfolio__btn btn" data-text="Показать больше" data-text-show-items="Показать больше" data-text-hide-items="Скрыть работы"><span class="btn__overlay"></span><span class="btn__text">Показать больше</span></span></div>
         </div>
       </section>
       <!--Portfolio END-->
