--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -103,13 +103,13 @@
       <!--Our plus BEGIN-->
       <section class="our-plus section section_top-0">
         <div class="container">
-          <div class="our-plus__content"><span class="our-plus__title title-h1 page__title wow fadeInUp" data-wow-delay="3.6s" data-wow-duration=".8s"><span>Мы создаём<br> сайты с любовью</span><span class="our-plus__wrap-love"><img class="our-plus__love" src="img/love.svg" alt=""></span></span>
+          <div class="our-plus__content"><span class="our-plus__title title-h1 page__title wow fadeInUp" data-wow-delay="3.7s" data-wow-duration="1s"><span>Мы создаём<br> сайты с любовью</span><span class="our-plus__wrap-love"><img class="our-plus__love" src="img/love.svg" alt=""></span></span>
             <ul class="our-plus__list">
               <li class="our-plus__item title-h3 text-gray wow fadeInUp" data-wow-delay="3.9s" data-wow-duration="1s">Уникально</li>
               <li class="our-plus__item title-h3 text-gray wow fadeInUp" data-wow-delay="4.2s" data-wow-duration="1s">Качественно</li>
               <li class="our-plus__item title-h3 text-gray wow fadeInUp" data-wow-delay="4.5s" data-wow-duration="1s">Функционально</li>
             </ul>
-            <p class="our-plus__bottom-text default-text text-gray wow fadeInUp" data-wow-delay="4.7s" data-wow-duration=".8s">Закажите продающий сайт для решения задач вашего бизнеса</p><a class="wow fadeInUp our-plus__btn btn btn-popup" href="#" data-text="Заказать консультацию" data-popup-key="callback" data-wow-delay="4.9s" data-wow-duration=".8s"><span class="btn__overlay"></span><span class="btn__text">Заказать консультацию</span></a>
+            <p class="our-plus__bottom-text default-text text-gray wow fadeInUp" data-wow-delay="4.7s" data-wow-duration=".8s">Закажите продающий сайт для решения задач вашего бизнеса</p><a class="wow fadeInUp our-plus__btn btn btn-popup d-sm-none d-inline-block" href="#" data-text="Заказать консультацию" data-popup-key="callback" data-wow-delay="4.7s" data-wow-duration=".8s"><span class="btn__overlay"></span><span class="btn__text">Заказать консультацию</span></a><a class="wow fadeInUp our-plus__btn btn btn-popup d-none d-sm-inline-block" href="#" data-text="Заказать консультацию" data-popup-key="callback" data-wow-delay=".1s" data-wow-duration=".8s"><span class="btn__overlay"></span><span class="btn__text">Заказать консультацию</span></a>
           </div>
         </div>
       </section>
