--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -160,24 +160,19 @@
           </div><span class="portfolio__title title-h1 page__title wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".8s">Работы</span>
           <ul class="portfolio__content">
             <li class="portfolio__wrap-item wow fadeInUp" data-wow-delay=".1s" data-wow-duration="1.2s">
-              <div class="portfolio__item">
-                <video class="portfolio__video" id="portfolio__video-1" src="img/portfolio-1.webm"></video><img class="portfolio__img" src="img/portfolio-1.jpg">
-              </div>
+              <div class="portfolio__item"><img class="portfolio__gif" src="img/portfolio-1.gif" alt=""><img class="portfolio__img" src="img/portfolio-1.jpg"></div>
             </li>
             <li class="portfolio__wrap-item wow fadeInUp" data-wow-delay=".3s" data-wow-duration="1.2s">
-              <div class="portfolio__item">
-                <video class="portfolio__video" id="portfolio__video-2" src="img/portfolio-2.webm"></video><img class="portfolio__img" src="img/portfolio-2.jpg">
-              </div>
+              <div class="portfolio__item"><img class="portfolio__gif" src="img/portfolio-2.gif" alt=""><img class="portfolio__img" src="img/portfolio-2.jpg"></div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
-              <div class="portfolio__item">
-                <video class="portfolio__video" id="portfolio__video-3" src="img/portfolio-3.webm"></video><img class="portfolio__img" src="img/portfolio-4.jpg">
-              </div>
+              <div class="portfolio__item"><img class="portfolio__gif" src="img/portfolio-3.gif" alt=""><img class="portfolio__img" src="img/portfolio-3.jpg"></div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
-              <div class="portfolio__item">
-                <video class="portfolio__video" id="portfolio__video-4" src="img/portfolio-4.webm"></video><img class="portfolio__img" src="img/portfolio-5.jpg">
-              </div>
+              <div class="portfolio__item"><img class="portfolio__gif" src="img/portfolio-4.gif" alt=""><img class="portfolio__img" src="img/portfolio-4.jpg"></div>
+            </li>
+            <li class="portfolio__wrap-item portfolio__wrap-item_hide">
+              <div class="portfolio__item"><img class="portfolio__gif" src="img/portfolio-5.gif" alt=""><img class="portfolio__img" src="img/portfolio-5.jpg"></div>
             </li>
           </ul>
           <div class="portfolio__wrap-btn wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".6s"><span class="portfolio__btn btn" data-text="Показать больше" data-text-show-items="Показать больше" data-text-hide-items="Скрыть работы"><span class="btn__overlay"></span><span class="btn__text">Показать больше</span></span></div>
