--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -160,29 +160,19 @@
           </div><span class="portfolio__title title-h1 page__title wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".8s">Работы</span>
           <ul class="portfolio__content">
             <li class="portfolio__wrap-item wow fadeInUp" data-wow-delay=".1s" data-wow-duration="1.2s">
-              <div class="portfolio__item" data-gif-src="img/portfolio-1.gif">
-                <div class="portfolio__gif"></div><img class="portfolio__img" src="img/portfolio-1.jpg">
-              </div>
+              <div class="portfolio__item" data-gif-src-mobile="img/portfolio-1-mobile.gif" data-gif-src-desktop="img/portfolio-1-desktop.gif"><img class="portfolio__gif" src="" alt=""><img class="portfolio__img" src="img/portfolio-1.jpg"></div>
             </li>
             <li class="portfolio__wrap-item wow fadeInUp" data-wow-delay=".3s" data-wow-duration="1.2s">
-              <div class="portfolio__item" data-gif-src="img/portfolio-2.gif">
-                <div class="portfolio__gif"></div><img class="portfolio__img" src="img/portfolio-2.jpg">
-              </div>
+              <div class="portfolio__item" data-gif-src-mobile="img/portfolio-2-mobile.gif" data-gif-src-desktop="img/portfolio-2-desktop.gif"><img class="portfolio__gif" src="" alt=""><img class="portfolio__img" src="img/portfolio-2.jpg"></div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
-              <div class="portfolio__item" data-gif-src="img/portfolio-3.gif">
-                <div class="portfolio__gif"></div><img class="portfolio__img" src="img/portfolio-3.jpg">
-              </div>
+              <div class="portfolio__item" data-gif-src-mobile="img/portfolio-3-mobile.gif" data-gif-src-desktop="img/portfolio-3-desktop.gif"><img class="portfolio__gif" src="" alt=""><img class="portfolio__img" src="img/portfolio-3.jpg"></div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
-              <div class="portfolio__item" data-gif-src="img/portfolio-4.gif">
-                <div class="portfolio__gif"></div><img class="portfolio__img" src="img/portfolio-4.jpg">
-              </div>
+              <div class="portfolio__item" data-gif-src-mobile="img/portfolio-4-mobile.gif" data-gif-src-desktop="img/portfolio-4-desktop.gif"><img class="portfolio__gif" src="" alt=""><img class="portfolio__img" src="img/portfolio-4.jpg"></div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
-              <div class="portfolio__item" data-gif-src="img/portfolio-5.gif">
-                <div class="portfolio__gif"></div><img class="portfolio__img" src="img/portfolio-5.jpg">
-              </div>
+              <div class="portfolio__item" data-gif-src-mobile="img/portfolio-5-mobile.gif" data-gif-src-desktop="img/portfolio-5-desktop.gif"><img class="portfolio__gif" src="" alt=""><img class="portfolio__img" src="img/portfolio-5.jpg"></div>
             </li>
           </ul>
           <div class="portfolio__wrap-btn wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".6s"><span class="portfolio__btn btn" data-text="Показать больше" data-text-show-items="Показать больше" data-text-hide-items="Скрыть работы"><span class="btn__overlay"></span><span class="btn__text">Показать больше</span></span></div>
