--- a/sivenkov-landing/index.html
+++ b/sivenkov-landing/index.html
@@ -63,7 +63,7 @@
     <!--Popups BEGIN-->
     <div class="popup popup-callback" data-popup-key="callback">
       <div class="popup__content">
-        <div class="prelaoder-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div><span class="popup__close"></span><span class="popup__title text-semibold title-h3">Заявка на звонок</span>
+        <div class="preloader-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div><span class="popup__close"></span><span class="popup__title text-semibold title-h3">Заявка на звонок</span>
         <form class="popup__form form">
           <div class="form__item form__item_100">
             <div class="form__wrap-field">
@@ -161,26 +161,41 @@
           <ul class="portfolio__content">
             <li class="portfolio__wrap-item wow fadeInUp" data-wow-delay=".1s" data-wow-duration="1.2s">
               <div class="portfolio__item">
+                <div class="portfolio__preloader">
+                  <div class="preloader-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
+                </div>
                 <div class="portfolio__gif" data-src-gif="img/portfolio-1.gif"></div><img class="portfolio__img" src="img/portfolio-1.jpg">
               </div>
             </li>
             <li class="portfolio__wrap-item wow fadeInUp" data-wow-delay=".3s" data-wow-duration="1.2s">
               <div class="portfolio__item">
+                <div class="portfolio__preloader">
+                  <div class="preloader-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
+                </div>
                 <div class="portfolio__gif" data-src-gif="img/portfolio-2.gif"></div><img class="portfolio__img" src="img/portfolio-2.jpg">
               </div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
               <div class="portfolio__item">
+                <div class="portfolio__preloader">
+                  <div class="preloader-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
+                </div>
                 <div class="portfolio__gif" data-src-gif="img/portfolio-3.gif"></div><img class="portfolio__img" src="img/portfolio-3.jpg">
               </div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
               <div class="portfolio__item">
+                <div class="portfolio__preloader">
+                  <div class="preloader-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
+                </div>
                 <div class="portfolio__gif" data-src-gif="img/portfolio-4.gif"></div><img class="portfolio__img" src="img/portfolio-4.jpg">
               </div>
             </li>
             <li class="portfolio__wrap-item portfolio__wrap-item_hide">
               <div class="portfolio__item">
+                <div class="portfolio__preloader">
+                  <div class="preloader-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
+                </div>
                 <div class="portfolio__gif" data-src-gif="img/portfolio-5.gif"></div><img class="portfolio__img" src="img/portfolio-5.jpg">
               </div>
             </li>
@@ -212,7 +227,7 @@
         </div>
         <div class="container"><span class="feedback__title title-h1 page__title wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".8s">Узнайте,<br class="d-375-400-inline-block"> что мы можем предложить вашему бизнесу</span>
           <div class="feedback__wrap-form form-wrap">
-            <div class="prelaoder-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
+            <div class="preloader-mini responsive-image"><img src="img/preloader-mini.svg" alt=""></div>
             <form class="feedback__form form">
               <div class="form__item form__item_50 wow fadeInUp" data-wow-delay=".1s" data-wow-duration=".8s">
                 <div class="form__wrap-field">
