--- a/IBANKER/index.html
+++ b/IBANKER/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" header__lang="ru-RU">
+<html class="no-js" lang="ru-RU">
   <head>
     <title>IBANKER</title>
 
