--- a/IBANKER/src/index.html
+++ b/IBANKER/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" header__lang="ru-RU">
+<html class="no-js" lang="ru-RU">
   <head>
     <title>IBANKER</title>
 
@@ -9,16 +9,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="IBANKER">
+    <meta name="keywords" content="IBANKER">
+    <meta name="author" content="IBANKER">
     <meta name="copyright" content="(c)">
-    <meta http-equiv="Reply-to" content="">
+    <meta http-equiv="Reply-to" content="IBANKER">
 
-    <meta property="og:title" content="">
-    <meta property="og:site_name" content="">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="IBANKER">
+    <meta property="og:site_name" content="IBANKER">
+    <meta property="og:url" content="IBANKER">
+    <meta property="og:description" content="IBANKER">
     <meta property="vk:image"  content="img/preview-link-vk.png">
     <meta property="og:image" content="img/preview-link.jpg">
 
