Include parts styles

--- a/IBANKER/src/index.html
+++ b/IBANKER/src/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="IBANKER">
     <meta name="author" content="IBANKER">
     <meta name="copyright" content="(c)">
-    <meta http-equiv="Reply-to" content="IBANKER">
+    <meta http-equiv="Reply-to" content="ibanker@info.com">
 
     <meta property="og:title" content="IBANKER">
     <meta property="og:site_name" content="IBANKER">
@@ -44,7 +44,9 @@
 
 
     <!--Styles BEGIN-->
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/libs.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!--[if IE]><link rel='stylesheet' href='css/styles-ie.min.css'><![endif]-->
     <!--Styles END-->
 
