--- a/IBANKER/src/index.html
+++ b/IBANKER/src/index.html
@@ -31,14 +31,14 @@
 
 
     <!--Favicon BEGIN-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#361a1a">
-    <link rel="shortcut icon" href="/img/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#361a1a">
+    <link rel="shortcut icon" href="img/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#ff0000">
-    <meta name="msapplication-config" content="/img/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <!--Favicon END-->
 
@@ -156,7 +156,7 @@
         </ul>
         
         <div class="header__wrap-menu-btn">
-          <button class="header__menu-btn">
+          <button class="header__menu-btn" aria-label="Menu button">
             <span class="header__menu-btn-line header__menu-btn-line_top"></span>
             <span class="header__menu-btn-line header__menu-btn-line_center"></span>
             <span class="header__menu-btn-line header__menu-btn-line_bottom"></span>
@@ -225,19 +225,19 @@
       <footer class="footer">
         <ul class="footer__social">
           <li class="footer__social-item">
-            <a href="#" target="_blank" class="footer__social-link">
+            <a aria-label="Go to VK" href="#" target="_blank" class="footer__social-link">
               <img src="img/icons/icon-vk.svg" alt="" class="footer__social-icon">
             </a>
           </li>
 
           <li class="footer__social-item">
-            <a href="#" target="_blank" class="footer__social-link">
+            <a aria-label="Go to Twitter" href="#" target="_blank" class="footer__social-link">
               <img src="img/icons/icon-tw.svg" alt="" class="footer__social-icon">
             </a>
           </li>
 
           <li class="footer__social-item">
-            <a href="#" target="_blank" class="footer__social-link">
+            <a aria-label="Go to Facebook" href="#" target="_blank" class="footer__social-link">
               <img src="img/icons/icon-fb.svg" alt="" class="footer__social-icon">
             </a>
           </li>
