--- a/IBANKER/src/index.html
+++ b/IBANKER/src/index.html
@@ -111,7 +111,7 @@
     <div class="page">
       <!-- Header BEGIN -->
       <header class="header">
-        <a href="#" class="header__logo header__element-border">
+        <a href="/" aria-label="Go to home page" class="header__logo header__element-border">
           <img class="header__logo-img" src="img/logo.svg" alt="">
         </a>
 
