--- a/IBANKER/src/index.html
+++ b/IBANKER/src/index.html
@@ -115,13 +115,13 @@
           <img class="header__logo-img" src="img/logo.svg" alt="">
         </a>
 
-        <ul class="header__lang header__item">
-          <li class="header__lang-item header-list-item">
-            <a href="#" class="header__lang-link header-list-link">Rus</a>
+        <ul class="header__lang lang header__item">
+          <li class="lang__item header-list-item">
+            <a href="#" class="lang__link header-list-link">Rus</a>
           </li>
 
-          <li class="header__lang-item header-list-item">
-            <a href="#" class="header__lang-link header-list-link header__lang-link_active">Eng</a>
+          <li class="lang__item header-list-item">
+            <a href="#" class="lang__link header-list-link lang__link_active">Eng</a>
           </li>
         </ul>
 
@@ -145,13 +145,13 @@
           </ul>
         </nav>
 
-        <ul class="header__contacts header__item">
-          <li class="header__contacts-item header__element-border">
-            <a href="mailto:bank@gmail.com" class="header__contacts-link">bank@gmail.com</a>
+        <ul class="header__contacts contacts header__item">
+          <li class="contacts__item header__element-border">
+            <a href="mailto:bank@gmail.com" class="contacts__link">bank@gmail.com</a>
           </li>
 
-          <li class="header__contacts-item header__element-border">
-            <a href="tel:375440012020" class="header__contacts-link">+375 (44) 001-20-20</a>
+          <li class="contacts__item header__element-border">
+            <a href="tel:375440012020" class="contacts__link">+375 (44) 001-20-20</a>
           </li>
         </ul>
         
@@ -172,23 +172,63 @@
 
           <ul class="menu__nav-list">
             <li class="menu__nav-item">
-              <a href="#" class="menu__nav-link menu__nav-link_active" target="_blank">Home</a>
+              <a href="#" class="menu__nav-link menu__animation-element menu__nav-link_active" target="_blank">Home</a>
             </li>
 
             <li class="menu__nav-item">
-              <a href="#" class="menu__nav-link" target="_blank">About us</a>
+              <a href="#" class="menu__nav-link menu__animation-element" target="_blank">About us</a>
             </li>
 
             <li class="menu__nav-item">
-              <a href="#" class="menu__nav-link" target="_blank">Services</a>
+              <a href="#" class="menu__nav-link menu__animation-element" target="_blank">Services</a>
             </li>
 
             <li class="menu__nav-item">
-              <a href="#" class="menu__nav-link" target="_blank">Contacts</a>
+              <a href="#" class="menu__nav-link menu__animation-element" target="_blank">Contacts</a>
             </li>
           </ul>
-
         </nav>
+
+        <ul class="menu__lang lang menu__animation-element">
+          <li class="lang__item">
+            <a href="#" class="lang__link">Rus</a>
+          </li>
+
+          <li class="lang__item">
+            <a href="#" class="lang__link lang__link_active">Eng</a>
+          </li>
+        </ul>
+
+        <ul class="menu__contacts contacts menu__animation-element">
+          <li class="contacts__item">
+            <a href="mailto:bank@gmail.com" class="contacts__link">bank@gmail.com</a>
+          </li>
+
+          <li class="contacts__item">
+            <a href="tel:375440012020" class="contacts__link">+375 (44) 001-20-20</a>
+          </li>
+        </ul>
+
+        <ul class="menu__social social menu__animation-element">
+          <li class="social__item">
+            <a aria-label="Go to VK" href="#" target="_blank" class="social__link">
+              <img src="img/icons/icon-vk.svg" alt="" class="social__icon">
+            </a>
+          </li>
+
+          <li class="social__item">
+            <a aria-label="Go to Twitter" href="#" target="_blank" class="social__link">
+              <img src="img/icons/icon-tw.svg" alt="" class="social__icon">
+            </a>
+          </li>
+
+          <li class="social__item">
+            <a aria-label="Go to Facebook" href="#" target="_blank" class="social__link">
+              <img src="img/icons/icon-fb.svg" alt="" class="social__icon">
+            </a>
+          </li>
+        </ul>
+
       </div>
       <!-- Menu END -->
 
@@ -223,22 +263,22 @@
 
       <!-- Footer BEGIN -->
       <footer class="footer">
-        <ul class="footer__social">
-          <li class="footer__social-item">
-            <a aria-label="Go to VK" href="#" target="_blank" class="footer__social-link">
-              <img src="img/icons/icon-vk.svg" alt="" class="footer__social-icon">
+        <ul class="footer__social social">
+          <li class="social__item">
+            <a aria-label="Go to VK" href="#" target="_blank" class="social__link">
+              <img src="img/icons/icon-vk.svg" alt="" class="social__icon">
             </a>
           </li>
 
-          <li class="footer__social-item">
-            <a aria-label="Go to Twitter" href="#" target="_blank" class="footer__social-link">
-              <img src="img/icons/icon-tw.svg" alt="" class="footer__social-icon">
+          <li class="social__item">
+            <a aria-label="Go to Twitter" href="#" target="_blank" class="social__link">
+              <img src="img/icons/icon-tw.svg" alt="" class="social__icon">
             </a>
           </li>
 
-          <li class="footer__social-item">
-            <a aria-label="Go to Facebook" href="#" target="_blank" class="footer__social-link">
-              <img src="img/icons/icon-fb.svg" alt="" class="footer__social-icon">
+          <li class="social__item">
+            <a aria-label="Go to Facebook" href="#" target="_blank" class="social__link">
+              <img src="img/icons/icon-fb.svg" alt="" class="social__icon">
             </a>
           </li>
         </ul>
