Set responsive background banner images

--- a/IBANKER/src/index.html
+++ b/IBANKER/src/index.html
@@ -97,11 +97,11 @@
     <!-- Background slider BEGIN -->
     <ul class="background-slider">
       <li class="background-slider__slide background-slider__slide_current">
-        <div class="background-slider__slide-img" style="background-image: url('img/slider-img-1-min.jpg')"></div> 
+        <div class="background-slider__slide-img responsive-bg-element" data-bg-desktop="../img/slider-img-1-min.jpg" data-bg-mobile="../img/slider-img-1-mobile-min.jpg"></div> 
       </li>
 
       <li class="background-slider__slide">
-        <div class="background-slider__slide-img" style="background-image: url('img/slider-img-2-min.jpg')"></div> 
+        <div class="background-slider__slide-img responsive-bg-element" data-bg-desktop="../img/slider-img-2-min.jpg" data-bg-mobile="../img/slider-img-2-mobile-min.jpg"></div> 
       </li>
     </ul>
     <!-- Background slider END -->
