Remove meta, fix js

--- a/IBANKER/src/index.html
+++ b/IBANKER/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html class="no-js" lang="ru-RU">
   <head>
     <title>IBANKER</title>
@@ -13,8 +13,7 @@
     <meta name="keywords" content="IBANKER">
     <meta name="author" content="IBANKER">
     <meta name="copyright" content="(c)">
-    <meta http-equiv="Reply-to" content="ibanker@info.com">
-
+ 
     <meta property="og:title" content="IBANKER">
     <meta property="og:site_name" content="IBANKER">
     <meta property="og:url" content="IBANKER">
@@ -97,11 +96,11 @@
     <!-- Background slider BEGIN -->
     <ul class="background-slider">
       <li class="background-slider__slide background-slider__slide_current">
-        <div class="background-slider__slide-img responsive-bg-element" data-bg-desktop="../img/slider-img-1-min.jpg" data-bg-mobile="../img/slider-img-1-mobile-min.jpg"></div> 
+        <div class="background-slider__slide-img responsive-bg-element" data-bg-desktop="img/slider-img-1-min.jpg" data-bg-mobile="img/slider-img-1-mobile-min.jpg"></div> 
       </li>
 
       <li class="background-slider__slide">
-        <div class="background-slider__slide-img responsive-bg-element" data-bg-desktop="../img/slider-img-2-min.jpg" data-bg-mobile="../img/slider-img-2-mobile-min.jpg"></div> 
+        <div class="background-slider__slide-img responsive-bg-element" data-bg-desktop="img/slider-img-2-min.jpg" data-bg-mobile="img/slider-img-2-mobile-min.jpg"></div> 
       </li>
     </ul>
     <!-- Background slider END -->
