Fix for audit on web.dev

--- a/TZ/index.html
+++ b/TZ/index.html
@@ -4,25 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>gulp-pug-starter</title>
-    <meta name="theme-color" content="#fff">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicons/favicon.ico" type="image/x-icon">
-    <link rel="icon" sizes="16x16" href="../img/favicons/favicon-16x16.png" type="image/png">
-    <link rel="icon" sizes="32x32" href="../img/favicons/favicon-32x32.png" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="../img/favicons/apple-touch-icon-precomposed.png">
-    <link rel="apple-touch-icon" href="../img/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0">
+    <meta name="description" content="Тестовое задание от студии Sivenkov">
+    <meta name="theme-color" content="#fff">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#17a5f4">
+    <link rel="shortcut icon" href="img/favicon/favicon.ico">
+    <meta property="og:title" content="Тестовое задание от студии Sivenkov">
+    <meta property="og:site_name" content="Sivenkov.by">
+    <meta property="og:url" content="https://sivenkov.by/">
+    <meta property="og:description" content="Тестовое задание от студии Sivenkov">
+    <meta property="og:image" content="img/preview-link.jpg">
+    <meta property="vk:image" content="img/preview-link-vk.png">
     <link rel="stylesheet" href="styles/main.min.css">
   </head>
   <body>
@@ -44,13 +43,13 @@
             <p class="header__logo">Company logo</p>
           </div>
           <div class="col-8 col-md-6">
-            <div class="header__wrap-select ml-auto">
-              <select class="header__select d-block">
+            <label class="header__wrap-select ml-auto" for="header-select">
+              <select class="header__select d-block" id="header-select">
                 <option>Options</option>
                 <option>English</option>
                 <option>Russian</option>
               </select>
-            </div>
+            </label>
           </div>
         </div>
       </div>
@@ -191,6 +190,5 @@
       </div>
     </footer>
     <script src="js/main.min.js"></script>
-    <script src="js/vendor.min.js"></script>
   </body>
 </html>
