--- a/TZ/index.html
+++ b/TZ/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>gulp-pug-starter</title>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="Тестовое задание от студии Sivenkov">
     <meta name="theme-color" content="#fff">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -43,13 +43,13 @@
             <p class="header__logo">Company logo</p>
           </div>
           <div class="col-8 col-md-6">
-            <label class="header__wrap-select ml-auto" for="header-select">
-              <select class="header__select d-block" id="header-select">
+            <div class="header__wrap-select ml-auto">
+              <select class="header__select d-block">
                 <option>Options</option>
                 <option>English</option>
                 <option>Russian</option>
               </select>
-            </label>
+            </div>
           </div>
         </div>
       </div>
